# chat_ui_backend

./: API_DOCUMENTATION.md  INSTALL.md  README.md  pyproject.toml  test_code_generation.py
app/: app.py
app/libs/chat/: __init__.py
app/mods/: __init__.py
app/mods/chat/: code_generator.py  gemini_bot.py  handler.py  memory_store.py  models.py
