[project]
name = "backend"
version = "0.1.0"
description = "Gemini Streaming Chatbot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "langgraph>=0.6.4",
    "langsmith>=0.4.13",
    "uvicorn>=0.35.0",
    "google-generativeai>=0.8.3",
    "langchain-google-genai>=2.0.5",
    "pydantic>=2.0.0",
]

[project.scripts]
dev = "uvicorn app.app:app --reload --host 0.0.0.0 --port 8000"
